Added initial fable2ts conversion
Also added some StringEnum attributes

--- a/src/Fsharp/Program/Program.fsproj
+++ b/src/Fsharp/Program/Program.fsproj
@@ -56,6 +56,7 @@ build.bat</PostBuildEvent>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Observable.fs" />
+    <Compile Include="fetch.fs" />
     <Compile Include="Apis.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Library1.fs" />
